@@ -14,9 +14,9 @@
 
   <modules>
     <module>agent-model</module>
+    <module>agent-central-client</module>
     <module>agent-core</module>
     <module>agent-drivers</module>
-    <module>agent-central-client</module>
     <module>agent-cli</module>
   </modules>
 
@@ -27,6 +27,7 @@
     <quarkus.platform.version>3.9.5</quarkus.platform.version>
     <picocli.version>4.7.6</picocli.version>
     <lombok.version>1.18.38</lombok.version>
+    <zsync.version>0.1.0</zsync.version>
     <junit.version>5.10.2</junit.version>
     <mockito.version>5.11.0</mockito.version>
     <assertj.version>3.25.3</assertj.version>
@@ -62,6 +63,12 @@
         <groupId>br.com.wonder</groupId>
         <artifactId>agent-central-client</artifactId>
         <version>${project.version}</version>
+      </dependency>
+
+      <dependency>
+        <groupId>io.takari.zsync</groupId>
+        <artifactId>zsync-core</artifactId>
+        <version>${zsync.version}</version>
       </dependency>
 
       <dependency>
@@ -110,11 +117,23 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-compiler-plugin</artifactId>
           <version>3.13.0</version>
+          <configuration>
+            <annotationProcessorPaths>
+              <path>
+                <groupId>org.projectlombok</groupId>
+                <artifactId>lombok</artifactId>
+                <version>${lombok.version}</version>
+              </path>
+            </annotationProcessorPaths>
+          </configuration>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-surefire-plugin</artifactId>
           <version>3.3.0</version>
+          <configuration>
+            <argLine>-Dnet.bytebuddy.experimental=true</argLine>
+          </configuration>
         </plugin>
       </plugins>
     </pluginManagement>
